# hui_one

codes/: transmitter.cpp
codes/Robort codes/Transform/: CMakeLists.txt  package.xml
codes/Robort codes/Transform/config/: transform_config.prototxt
codes/Robort codes/Transform/include/: gimbal_transform.h
codes/Robort codes/Transform/proto/: transform_config.pb.cc  transform_config.pb.h  transform_config.proto
codes/Robort codes/Transform/src/: gimbal_transform.cpp
codes/Robort codes/infocenter/: CMakeLists.txt  package.xml
codes/Robort codes/infocenter/cfg/: c1.cfg  p0.cfg  p1.cfg
codes/Robort codes/infocenter/msg/: gimbal_control_info.msg
codes/Robort codes/infocenter/src/: InfoCenter.py  info_sub_pub.py  utils.py
codes/Robort codes/localization/backup/config/: test_config.prototxt
codes/Robort codes/localization/backup/proto/: test_config.pb.cc  test_config.pb.h  test_config.proto
codes/Robort codes/localization/backup/src/: CMakeLists.txt  demo.cpp  package.xml
codes/Robort codes/localization/icra_gmapping/: CMakeLists.txt  package.xml
codes/Robort codes/localization/icra_gmapping/launch/: 1.launch~  icra_gmapping.launch  icra_gmapping.launch~  load_map.launch  load_map.launch~
codes/Robort codes/localization/icra_gmapping/maps/: area.pgm  area.yaml  mapfinal.pgm  mapfinal.yaml  myarea.pgm  myarea.yaml
codes/Robort codes/localization/icra_gmapping/rviz/: stdr_gmapping_config.rviz
codes/Robort codes/localization/map_server/test/: testmap.yaml
codes/Robort codes/localization/readme/: commands  positioning_process.docx
codes/Robort codes/localization/roborts_localization/: CMakeLists.txt~  amcl.launch  amcl.launch~
codes/Robort codes/localization/roborts_localization/config/: localization.yaml
codes/Robort codes/localization/robots/: CMakeLists.txt  model.xml  package.xml
codes/Robort codes/localization/robots/launch/: robots.launch  robots.launch~
codes/Robort codes/localization/robots/src/: state_publisher.cpp  transform.cpp  transform_2018.4.2.cpp  transform_20180410.cpp~  transform_old.cpp
codes/Robort codes/remote_control/: CMakeLists.txt  package.xml  readme
codes/Robort codes/remote_control/position/: CMakeLists.txt  package.xml
codes/Robort codes/remote_control/position/src/: main.cpp
codes/Robort codes/remote_control/src/: moveControl.cpp
codes/Robort codes/rm_msgs/: CMakeLists.txt  package.xml  readme.md
codes/Robort codes/rm_msgs/msg/: GameInfo.msg  GimbalAngle.msg  GimbalCtrl.msg  HurtData.msg  PositionUWB.msg  RFID.msg  ShootCtrl.msg  ShootData.msg
codes/Robort codes/roborts_common/: CMakeLists.txt  package.xml
codes/Robort codes/roborts_costmap/: CMakeLists.txt  package.xml
codes/Robort codes/roborts_costmap/config/: costmap_parameter_config_for_local_plan.prototxt
codes/Robort codes/roborts_costmap/src/: costmap_interface.cpp  inflation_layer.cpp  obstacle_layer.cpp  static_layer.cpp  test_costmap.cpp
codes/Robort codes/roborts_planning/: CMakeLists.txt  package.xml
codes/Robort codes/roborts_planning/global_planner/: CMakeLists.txt  base_test.cpp  global_planner_0314_bule.cpp  global_planner_8.cpp  global_planner_8_buff.cpp  global_planner_base.h  global_planner_buff_test.cpp  global_planner_node.cpp  global_planner_node.h  global_planner_test.cpp
codes/Robort codes/roborts_planning/global_planner/a_star_planner/: a_star_planner.cpp  a_star_planner.h
codes/Robort codes/roborts_planning/global_planner/config/: global_planner_config.prototxt
codes/Robort codes/roborts_planning/local_planner/: CMakeLists.txt
codes/Robort codes/roborts_planning/local_planner/include/local_planner/: local_planner_base.h  local_planner_node.h  optimal_base.h
codes/Robort codes/roborts_planning/local_planner/src/: local_planner_node.cpp  local_planner_test.cpp  teb_test.cpp  vel_converter.cpp
codes/Robort codes/roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
codes/Robort codes/roborts_planning/local_planner/timed_elastic_band/include/timed_elastic_band/: teb_local_planner.h  teb_optimal.h
codes/Robort codes/roborts_planning/local_planner/timed_elastic_band/src/: teb_local_planner.cpp  teb_optimal.cpp
codes/Robort codes/serial/: CMakeLists.txt  infantry_info.h  package.xml  serial_com_node.cpp  serial_com_node.h
codes/Robort codes/serial/config/: serial_com_config.prototxt
codes/Robort codes/serial/launch/: static_tf.launch
codes/Robort codes/serial/proto/: serial_com_config.pb.cc  serial_com_config.pb.h
codes/VScode/hello/: .out  1101  1101.c  learn  learn.c  learn.cpp  main  main.cpp  text  text.cpp
codes/VScode/mycan/: mycan.c  mycan.h
codes/VScode/real_can/: socket_can.cpp  style.sh
codes/VScode/socket_can/: can.h  cantool.c
codes/c++_learn/: CMakeLists.txt  myclasses.cpp  myclasses.h  one.cpp  three_opencv.cpp  two.cpp
codes/leetcode_learn/: one  one.cpp
codes/shuzi/hough/: CMakeLists.txt  houghcricle.cpp  houghline.cpp  own_houghline.cpp  use.cpp  yanseshibie.cpp  yanseshibie.h
codes/shuzi/image_fushi/: CMakeLists.txt  fushi.cpp
codes/shuzi/shuzituxiang/: CMakeLists.txt  dft.cpp
codes/shuzi/sift/: CMakeLists.txt  test.cpp
codes/slamcodes/HelloSlam/: CMakeLists.txt  cvtest.cpp  helloslam.cpp  libhelloslam.cpp
codes/slamcodes/cmaketext/: CMakeLists.txt  usehello.cpp
codes/slamcodes/slambook-master/ch7/: CMakeLists.txt  feature_extraction.cpp
codes/tell_color/: CMakeLists.txt  color_zuobiao.cpp
