<package>
    <name>remote_control</name>
    <version>1.0.0</version>
    <description>
    xxx
    </description>
    <author>xxx</author>
    <maintainer email="xxxx@xx.com">xxx</maintainer>
    <license>GPL 3.0 </license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>common</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>rm_msgs</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>common</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>rm_msgs</run_depend>
    <export>
    </export>

</package>
